# apps/api/src/app.module.ts
@@ -1,6 +1,7 @@
 import { Module } from '@nestjs/common';
 
 import { AuthModule } from './auth/auth.module';
+import { CommentModule } from './comments/comment.module';
 import { AuthorizationModule } from './authorization/authorization.module';
 import { DatabaseModule } from './database/database.module';
 import { HealthController } from './health/health.controller';
@@ -10,7 +11,7 @@ import { TaskModule } from './tasks/task.module';
 import { WorkspaceModule } from './workspaces/workspace.module';
 
 @Module({
-  imports: [DatabaseModule, ObservabilityModule, AuthModule, AuthorizationModule, WorkspaceModule, ProjectModule, TaskModule],
+  imports: [DatabaseModule, ObservabilityModule, AuthModule, AuthorizationModule, WorkspaceModule, ProjectModule, TaskModule, CommentModule],
   controllers: [HealthController]
 })
 export class AppModule {}
